# crypto_public_data_capturer

./: CMakeLists.txt  README.md  main  main.cpp
build-standalone/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
